--- a/index.html
+++ b/index.html
@@ -131,4 +131,38 @@
     <p>&copy; 2025 Ingenious Labs</p>
   </footer>
 </body>
+<div id="chat-widget" style="position: fixed; bottom: 20px; right: 20px;">
+  <button onclick="toggleChat()" style="padding: 10px;">Chat</button>
+  <div id="chat-box" style="display:none; background:#f4f4f4; width:300px; height:400px; border:1px solid #ccc; overflow:auto;">
+    <div id="messages" style="height: 90%; overflow-y: scroll;"></div>
+    <input id="user-input" type="text" style="width: 80%;" placeholder="Escribe aquí..." />
+    <button onclick="sendMessage()">Enviar</button>
+  </div>
+</div>
+
+<script>
+function toggleChat() {
+  const box = document.getElementById("chat-box");
+  box.style.display = box.style.display === "none" ? "block" : "none";
+}
+
+async function sendMessage() {
+  const input = document.getElementById("user-input");
+  const msg = input.value;
+  if (!msg) return;
+
+  const messagesDiv = document.getElementById("messages");
+  messagesDiv.innerHTML += `<div><b>Tú:</b> ${msg}</div>`;
+  input.value = "";
+
+  const res = await fetch("https://https://chatapi-43mg.onrender.com", {
+    method: "POST",
+    headers: {"Content-Type": "application/json"},
+    body: JSON.stringify({message: msg})
+  });
+
+  const data = await res.json();
+  messagesDiv.innerHTML += `<div><b>Bot:</b> ${data.response}</div>`;
+}
+</script>
 </html>
