--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ async function sendMessage() {
   messagesDiv.innerHTML += `<div><b>Tú:</b> ${msg}</div>`;
   input.value = "";
 
-  const res = await fetch("https://chatapi-43mg.onrender.com", {
+  const res = await fetch("https://chatapi-43mg.onrender.com/chat", {
     method: "POST",
     headers: {"Content-Type": "application/json"},
     body: JSON.stringify({message: msg})
