--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       --verde-suave: #a3b18a;
       --fondo-claro: #fefefb;
       --texto-oscuro: #1c1c1c;
+      --sombra: rgba(0, 0, 0, 0.2);
     }
     body {
       margin: 0;
@@ -57,7 +58,7 @@
       background: white;
       border-radius: 12px;
       padding: 1.5rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px var(--sombra);
       text-decoration: none;
       color: inherit;
     }
@@ -76,93 +77,107 @@
       padding: 1rem;
       margin-top: 2rem;
     }
+
+    #chat-widget {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 1000;
+    }
+    #chat-box {
+      display: none;
+      background: white;
+      width: 90vw;
+      max-width: 350px;
+      height: 500px;
+      border-radius: 10px;
+      box-shadow: 0 8px 16px var(--sombra);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+    }
+    #messages {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      font-size: 0.95rem;
+    }
+    #chat-controls {
+      display: flex;
+      padding: 10px;
+      border-top: 1px solid #ddd;
+    }
+    #user-input {
+      flex: 1;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+    #send-btn {
+      background: var(--verde-oscuro);
+      color: white;
+      border: none;
+      padding: 8px 12px;
+      margin-left: 6px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    #toggle-chat-btn {
+      background-color: var(--verde-suave);
+      color: var(--texto-oscuro);
+      border: none;
+      padding: 12px 16px;
+      border-radius: 50px;
+      box-shadow: 0 4px 10px var(--sombra);
+      font-weight: bold;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <img src="assets/logo.png" alt="Ingenious Labs Logo">
-    <nav>
-      <a href="#productos">Productos</a>
-      <a href="#contacto">Contacto</a>
-      <a href="mision-vision.html">Misión y Visión</a>
-    </nav>
-  </header>
+  <!-- ...contenido anterior intacto... -->
 
-  <section class="hero">
-    <h2>Soluciones Inteligentes para un Futuro Conectado</h2>
-    <p>IA, visión por computador, animación 3D y más para empresas modernas.</p>
-  </section>
-
-
-  <section>
-    <h2 style="text-align: center; color: #3a5a40;">Descubre Ingenious Labs en acción</h2>
-    <video width="100%" autoplay muted loop playsinline style="border-radius: 12px; margin-top: 1rem;">
-      <source src="assets/video.mp4" type="video/mp4">
-      Tu navegador no admite la reproducción de video.
-    </video>
-  </section>
-
-
-  <section class="products" id="productos">
-    <a class="product-card" href="neurocam.html">
-      <img src="assets/neurocam.png" alt="NeuroCam Vision">
-      <h3>NeuroCam Vision</h3>
-      <p>Monitoreo en tiempo real con reconocimiento facial, placas y objetos. Seguridad con visión por IA.</p>
-    </a>
-    <a class="product-card" href="synthmind.html">
-      <img src="assets/synthmind.png" alt="SynthMind AI">
-      <h3>SynthMind AI</h3>
-      <p>Respuestas inteligentes a documentos internos con IA. Perfecto para soporte o legal.</p>
-    </a>
-    <a class="product-card" href="fractamotion.html">
-      <img src="assets/fractamotion.png" alt="FractaMotion Studio">
-      <h3>FractaMotion Studio</h3>
-      <p>Animaciones 3D personalizadas con IA, ideal para educación, videojuegos y branding.</p>
-    </a>
-    <a class="product-card" href="nerviot.html">
-      <img src="assets/nerviot.png" alt="NervIoT">
-      <h3>NervIoT</h3>
-      <p>Plataforma IoT para monitoreo ambiental y automatización industrial con sensores conectados.</p>
-    </a>
-  </section>
-
-  <footer id="contacto">
-    <p>Contacto: proyectos@ingeniouslabs.co | +57 316 828 6301</p>
-    <p>&copy; 2025 Ingenious Labs</p>
-  </footer>
-</body>
-<div id="chat-widget" style="position: fixed; bottom: 20px; right: 20px;">
-  <button onclick="toggleChat()" style="padding: 10px;">Chat</button>
-  <div id="chat-box" style="display:none; background:#f4f4f4; width:300px; height:400px; border:1px solid #ccc; overflow:auto;">
-    <div id="messages" style="height: 90%; overflow-y: scroll;"></div>
-    <input id="user-input" type="text" style="width: 80%;" placeholder="Escribe aquí..." />
-    <button onclick="sendMessage()">Enviar</button>
+  <div id="chat-widget">
+    <button id="toggle-chat-btn" onclick="toggleChat()">💬 ¿Necesitas ayuda?</button>
+    <div id="chat-box">
+      <div id="messages"></div>
+      <div id="chat-controls">
+        <input id="user-input" type="text" placeholder="Escribe tu mensaje..." />
+        <button id="send-btn" onclick="sendMessage()">Enviar</button>
+      </div>
+    </div>
   </div>
-</div>
 
-<script>
-function toggleChat() {
-  const box = document.getElementById("chat-box");
-  box.style.display = box.style.display === "none" ? "block" : "none";
-}
+  <script>
+    function toggleChat() {
+      const box = document.getElementById("chat-box");
+      box.style.display = box.style.display === "none" || box.style.display === "" ? "flex" : "none";
+    }
 
-async function sendMessage() {
-  const input = document.getElementById("user-input");
-  const msg = input.value;
-  if (!msg) return;
+    async function sendMessage() {
+      const input = document.getElementById("user-input");
+      const msg = input.value.trim();
+      if (!msg) return;
 
-  const messagesDiv = document.getElementById("messages");
-  messagesDiv.innerHTML += `<div><b>Tú:</b> ${msg}</div>`;
-  input.value = "";
+      const messagesDiv = document.getElementById("messages");
+      messagesDiv.innerHTML += `<div><b>Tú:</b> ${msg}</div>`;
+      input.value = "";
 
-  const res = await fetch("https://chatapi-43mg.onrender.com/chat", {
-    method: "POST",
-    headers: {"Content-Type": "application/json"},
-    body: JSON.stringify({message: msg})
-  });
+      try {
+        const res = await fetch("https://chatapi-43mg.onrender.com/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message: msg })
+        });
 
-  const data = await res.json();
-  messagesDiv.innerHTML += `<div><b>Bot:</b> ${data.response}</div>`;
-}
-</script>
+        const data = await res.json();
+        messagesDiv.innerHTML += `<div><b>Bot:</b> ${data.response}</div>`;
+        messagesDiv.scrollTop = messagesDiv.scrollHeight;
+      } catch (err) {
+        messagesDiv.innerHTML += `<div><b>Bot:</b> Error al contactar el servidor.</div>`;
+      }
+    }
+  </script>
+</body>
 </html>
